# handwriting-analysis

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PRESENTATION.md  README.md  SECURITY.md  demo.py  forensic_handwriting_analyzer.py  generate_demo_gif.py  llm_handwriting_reviewer.py  marketing_demo.py  pyproject.toml  requirements.txt  showcase.py  signature_analyzer.py  statistical_signature_generator.py
assets/: demo.cast  marketing_demo.cast
examples/: questioned_document.json  sample_baseline_data.json
sample_output/: forensic_report.txt
tests/: __init__.py  test_analysis.py
